--- a/file_link/templates/file_links/relatorios.html
+++ b/file_link/templates/file_links/relatorios.html
@@ -1,4 +1,4 @@
-{% extends "webpages/view.html" %}
+{% extends "subjects/view.html" %}
 
 {% load static i18n pagination permissions_tags subject_counter %}
 {% load django_bootstrap_breadcrumbs %}
