fixed top selectors

--- a/analytics/static/analytics/general.sass
+++ b/analytics/static/analytics/general.sass
@@ -6,6 +6,7 @@ $title-color: #009688
     padding: 10px
     overflow: auto
     width: 100%
+    background-color: #ffffff
 
 #general-report-header
     height: 10%
@@ -17,25 +18,28 @@ $title-color: #009688
         float: right
         display: inline-flex
         width: 50%
-        height: 15%
+        margin-bottom: 0px
 
         li
             margin-right: 2%
             width: 50%
             color: white
+            font-size: 20px
+            background-color: #0f8a9a
+            width: 100%
+            text-align: center
+            border-radius: 20px
+            height: 30px
 
-            div.selected
-                background-color: #4dcfbd 
-                width: 100%
-                text-align: center
-                border-radius: 20px
 
-            div
-                background-color: #0f8a9a
-                width: 100%
-                text-align: center
-                border-radius: 20px
+        li.selected
+            background-color: #4dcfbd 
+            width: 100%
+            text-align: center
+            border-radius: 20px
 
+         
+               
 
 
 #most-used-tags-header
