--- a/analytics/templates/analytics/general.html
+++ b/analytics/templates/analytics/general.html
@@ -44,11 +44,11 @@
             <h3>{% trans "Amadeus Report" %}</h3>
 
             <ul id="report-header-options">
-                <li >
-                    <div class="selected">{% trans "Focus" %}<div>
+                <li  class="selected">
+                    {% trans "Focus" %}
                 </li>
                 <li>
-                    <div>{% trans "Log" %}<div>
+                    {% trans "Log" %}
                 </li>
             </ul>
         </header> 
