--- a/analytics/static/analytics/general.css
+++ b/analytics/static/analytics/general.css
@@ -3,7 +3,8 @@
   border-radius: 20px;
   padding: 10px;
   overflow: auto;
-  width: 100%; }
+  width: 100%;
+  background-color: #ffffff; }
 
 #general-report-header {
   height: 10%;
@@ -14,21 +15,22 @@
     float: right;
     display: inline-flex;
     width: 50%;
-    height: 15%; }
+    margin-bottom: 0px; }
     #general-report-header ul li {
       margin-right: 2%;
       width: 50%;
-      color: white; }
-      #general-report-header ul li div.selected {
-        background-color: #4dcfbd;
-        width: 100%;
-        text-align: center;
-        border-radius: 20px; }
-      #general-report-header ul li div {
-        background-color: #0f8a9a;
-        width: 100%;
-        text-align: center;
-        border-radius: 20px; }
+      color: white;
+      font-size: 20px;
+      background-color: #0f8a9a;
+      width: 100%;
+      text-align: center;
+      border-radius: 20px;
+      height: 30px; }
+    #general-report-header ul li.selected {
+      background-color: #4dcfbd;
+      width: 100%;
+      text-align: center;
+      border-radius: 20px; }
 
 #most-used-tags-header {
   background: linear-gradient(to right, #0e8999, #6bf0ce);
