--- a/youtube_video/templates/youtube/relatorios.html
+++ b/youtube_video/templates/youtube/relatorios.html
@@ -64,7 +64,7 @@
 
         function selectHandler() {
            var selectedItem = chart.getSelection()[0];
-           console.log(selectedItem.row,selectedItem.column);
+            var col = data.getColumnLabel(selectedItem.column);
            if (selectedItem) {
                if (selectedItem.row == 0 && selectedItem.column == 1){
                    tabela_atual = true;
@@ -144,7 +144,25 @@
                     drawTable(column_n_did,pagination(search,1),false);
                     alterTitleTable(search.length);
                     putpagination(search,tabela_atual);
+               } else if (col == "{{n_did_table}}"){
+                   tabela_atual = false;
+                   search = [];
+                   for (var i in json_n_did["data"]){
+                       search.push([json_n_did["data"][i][0],json_n_did["data"][i][1],
+                                    json_n_did["data"][i][2],json_n_did["data"][i][3]]);
+                   }
+                   searcher(col, tabela_atual,true);
+
+               } else if (col == "{{did_table}}"){
+                   tabela_atual = true;
+                   search = [];
+                   for (var i in json_history["data"]){
+                       search.push([json_history["data"][i][0],json_history["data"][i][1],
+                                   json_history["data"][i][2],json_history["data"][i][3]]);
+                   }
+                   searcher(col, tabela_atual,true);
                }
+               scroll("#title-table");
            }
           chart.setSelection([])
          }
@@ -214,16 +232,18 @@
 {% endblock %}
 
 {% block content %}
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <p>{{ message }}</p>
-            </div>
-        {% endfor %}
-    {% endif %}
+    <div id="message-top">
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <p>{{ message }}</p>
+                </div>
+            {% endfor %}
+        {% endif %}
+    </div>
     <div class="panel panel-info topic-panel">
         <div class="panel-heading">
             <div class="row">
@@ -453,19 +473,42 @@
                         $("body").removeClass("modal-open");
                         $( "#modal-message" ).empty();
                         $(".modal-backdrop.fade.in").remove();
+                        $("#message-top").empty();
+                        $("#message-top").append('\
+                            <div class="alert alert-success alert-dismissible" role="alert">\
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">\
+                                    <span aria-hidden="true">&times;</span>\
+                                </button>\
+                                <p>' + data["message"] + '</p>\
+                            </div>\
+                        ');
+                         $("html, body").animate({ scrollTop: 0 }, "slow");
+                         $('#google-chart-checkbox')[0].reset();
                     } else {
                         $( "#modal-message" ).empty();
                         $(".modal-backdrop.fade.in").remove();
                         $( "#modal-message" ).append( data );
                         $("#send-message-modal").modal("show");
+                        $("html, body").animate({ scrollTop: 0 }, "slow");
                     }
                 },
                 error: function(data){
-                    console.log("erro");
+                    $("#message-top").empty();
+                    $("#message-top").append('\
+                        <div class="alert alert-danger alert-dismissible" role="alert">\
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">\
+                                <span aria-hidden="true">&times;</span>\
+                            </button>\
+                            <p>' + data.responseText + '</p>\
+                        </div>\
+                    ');
+                    $("html, body").animate({ scrollTop: 0 }, "slow");
                 }
             });
         }
-
+        function scroll(to){
+            $("html, body").animate({ scrollTop: $(to).offset().top }, "slow");
+        }
         function alterTitleTable (quant){
             $("#title-table").text(quant + " {% trans 'record(s)' %}");
         }
