Modified home template to adjust news

--- a/subjects/templates/subjects/home.html
+++ b/subjects/templates/subjects/home.html
@@ -15,16 +15,21 @@
 	{% endif %}
 
 
+{% if news %}
+
+
 
 
   <!-- Wrapper for slides -->
 	<div id="myCarousel" class="carousel slide " data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-	<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-	<li data-target="#myCarousel" data-slide-to="1"></li>
-	<li data-target="#myCarousel" data-slide-to="2"></li>
-	<li data-target="#myCarousel" data-slide-to="3"></li>
+		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		{% for new in news %}
+				{% if forloop.counter != news.count %}
+				    <li data-target="#myCarousel" data-slide-to="{{forloop.counter}}"></li>
+				{% endif %}
+		{% endfor %}
   </ol>
 
 <div class="carousel-inner" role="listbox">
@@ -52,6 +57,7 @@
   </a>
 </div>
 
+{% endif %}
 
 
 
