improved tag cloud collision system as well as calculation code

--- a/analytics/static/analytics/general.css
+++ b/analytics/static/analytics/general.css
@@ -47,8 +47,7 @@
   color: #ffffff; }
 
 .tag-name {
-  color: #ffffff;
-  font-size: 10px; }
+  color: #ffffff; }
 
 #left-data-selector {
   background: linear-gradient(#0e8999, #6bf0ce);
