--- a/analytics/static/analytics/general.sass
+++ b/analytics/static/analytics/general.sass
@@ -74,6 +74,7 @@ $title-color: #009688
 .chart
     width: 30%
     float: left
+    text-align: center
     h4
         color: $title-color
 
@@ -133,3 +134,8 @@ $title-color: #009688
 
 .most-accessed-item:hover 
     background-color: #3aa7ad
+
+
+#month_selector_div
+    text-align: center
+    color: #009688
