--- a/analytics/templates/analytics/general.html
+++ b/analytics/templates/analytics/general.html
@@ -117,7 +117,9 @@
                             <span class="glyphicon glyphicon-calendar"></span>
                         </span>
                     </div>
-                       
+                    <div id="bottom-right-chart-body">
+                        
+                    </div>
                 </div>
             </section>
 
