added tooltip for heatmap calendar items

--- a/analytics/static/analytics/general.sass
+++ b/analytics/static/analytics/general.sass
@@ -140,3 +140,10 @@ $title-color: #009688
 #month_selector_div
     text-align: center
     color: #009688
+
+.date-tooltip
+    width: 40px
+    height: 20px
+    background: #52b7bd
+    color: white
+    text-align: center
