--- a/dashboards/templates/dashboards/category.html
+++ b/dashboards/templates/dashboards/category.html
@@ -28,7 +28,7 @@
                     <li>
                         {% trans "Platform Report" %}
                     </li>
-                   <a href=""><li class="active">
+                   <a href="{% url 'dashboards:' %}"><li class="active">
                         {% trans "Category Report" %}
                     </li></a> 
                     <li>
