--- a/analytics/static/analytics/general.css
+++ b/analytics/static/analytics/general.css
@@ -119,4 +119,11 @@
   text-align: center;
   color: #009688; }
 
+.date-tooltip {
+  width: 40px;
+  height: 20px;
+  background: #52b7bd;
+  color: white;
+  text-align: center; }
+
 /*# sourceMappingURL=general.css.map */
