--- a/dashboards/templates/dashboards/general.html
+++ b/dashboards/templates/dashboards/general.html
@@ -29,7 +29,7 @@
                     <li class="active">
                         {% trans "Platform Report" %}
                     </li>
-                   <a href=""><li>
+                   <a href="{% url 'dashboards:view_categories' %}"><li>
                         {% trans "Category Report" %}
                     </li></a> 
                     <li>
