--- a/goals/templates/goals/relatorios.html
+++ b/goals/templates/goals/relatorios.html
@@ -1,4 +1,4 @@
-{% extends "youtube/view.html" %}
+{% extends "subjects/view.html" %}
 
 {% load static i18n pagination permissions_tags subject_counter %}
 {% load django_bootstrap_breadcrumbs %}
@@ -11,7 +11,7 @@
 
     var array_history = [];
     {%for data_json in json_history.data %}
-        array_history.push(["{{data_json.0}}","{{data_json.1}}","{% if data_json.2 == 'view' %} {{view}} {% elif data_json.2 == 'watch' %} {{watch}} {% else %} {{finish}} {% endif %}",{% if data_json.3 is not None %}new Date('{{data_json.3.isoformat}}'){% else%}null{% endif %}]);
+        array_history.push(["{{data_json.0}}","{{data_json.1}}","{% if data_json.2 == 'view' %} {{view}} {% elif data_json.2 == 'submit' %} {{submit}} {% endif %}",{% if data_json.3 is not None %}new Date('{{data_json.3.isoformat}}'){% else%}null{% endif %}]);
     {% endfor%}
     var json_history = {"data":array_history};
     var column_history = [{"string":'{% trans "User" %}'},{"string":'{% trans "Group" %}'},{"string":'{% trans "Action" %}'},{"date":'{% trans "Date of Action" %}'}];
@@ -95,7 +95,7 @@
                } else if (selectedItem.row == 1 && selectedItem.column == 1){
                    tabela_atual = true;
                    search = [];
-                   var text = "{{watch}}";
+                   var text = "{{submit}}";
                    for (var i in json_history["data"]){
                        if (json_history["data"][i][2].toLowerCase().includes(text.toLowerCase())){
                             search.push([json_history["data"][i][0],json_history["data"][i][1],
@@ -108,33 +108,7 @@
                } else if(selectedItem.row == 1 && selectedItem.column == 2){
                    tabela_atual = false;
                    search = [];
-                   var text = "{{watch}}";
-                   for (var i in json_n_did["data"]){
-                       if (json_n_did["data"][i][3].toLowerCase().includes(text.toLowerCase())){
-                            search.push([json_n_did["data"][i][0],json_n_did["data"][i][1],
-                                    json_n_did["data"][i][2],json_n_did["data"][i][3]]);
-                       }
-                   }
-                    drawTable(column_n_did,pagination(search,1),false);
-                    alterTitleTable(search.length);
-                    putpagination(search,tabela_atual);
-               } else if (selectedItem.row == 2 && selectedItem.column == 1){
-                   tabela_atual = true;
-                   search = [];
-                   var text = "{{finish}}";
-                   for (var i in json_history["data"]){
-                       if (json_history["data"][i][2].toLowerCase().includes(text.toLowerCase())){
-                            search.push([json_history["data"][i][0],json_history["data"][i][1],
-                                    json_history["data"][i][2],json_history["data"][i][3]]);
-                       }
-                   }
-                    drawTable(column_history,pagination(search,1),true,3);
-                    alterTitleTable(search.length);
-                    putpagination(search,tabela_atual);
-               } else if(selectedItem.row == 2 && selectedItem.column == 2){
-                   tabela_atual = false;
-                   search = [];
-                   var text = "{{finish}}";
+                   var text = "{{submit}}";
                    for (var i in json_n_did["data"]){
                        if (json_n_did["data"][i][3].toLowerCase().includes(text.toLowerCase())){
                             search.push([json_n_did["data"][i][0],json_n_did["data"][i][1],
@@ -227,8 +201,10 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
+    {% breadcrumb topic 'subjects:topic_view' subject.slug topic.slug %}
+	{% breadcrumb goal 'goals:submit' goal.slug %}
     {% trans 'Reports' as bread %}
-	{% breadcrumb bread ytvideo%}
+	{% breadcrumb bread goal %}
 {% endblock %}
 
 {% block content %}
@@ -249,14 +225,14 @@
             <div class="row">
                 <div class="col-md-12 category-header">
                     <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
-                        <span>{{ytvideo}} / {% trans "Reports" %}</span>
+                        <span>{{goal}} / {% trans "Reports" %}</span>
                     </h4>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-                <h4 style="margin-top: 15px; margin-bottom: 10px" ><strong>{% trans "Report of the resource " %}{{ytvideo}}</strong></h4>
+                <h4 style="margin-top: 15px; margin-bottom: 10px" ><strong>{% trans "Report of the resource " %}{{goal}}</strong></h4>
             </div>
         </div>
         <div class="row">
@@ -401,7 +377,7 @@
                         }
                 }
             }
-            
+            console.log(search);
             if (!load_histoty){
                 drawTable(column_n_did,pagination(search,1),false);
             } else {
@@ -441,7 +417,7 @@
 
         function openmodal(){
             $( "#modal-message" ).empty();
-           $.get( "{% url 'youtube:send_message' ytvideo.slug %}", function( data ) {
+           $.get( "{% url 'goals:send_message' goal.slug %}", function( data ) {
                 $( "#modal-message" ).append( data );
                 $("#send-message-modal").modal("show");
             });
@@ -461,7 +437,7 @@
 
             var formData = new FormData($('#text_chat_form').get(0));
             $.ajax({
-                url: "{% url 'youtube:send_message' ytvideo.slug %}",
+                url: "{% url 'goals:send_message' goal.slug %}",
                 type: "POST",
                 data: formData,
                 cache: false,
