fixed translations and some texts as well as general dashboards most active users and most used tags chart

--- a/dashboards/templates/dashboards/general.html
+++ b/dashboards/templates/dashboards/general.html
@@ -74,15 +74,15 @@
 
                       
                                 <div class="selector" data-url="categories">
-                                    <p>  {% trans "Most accessed categories" %} </p>
+                                    <p>  {% trans "Categories" %} </p>
                                 </div>
                           
                                 <div class="selector" data-url="subjects">
-                                   <p> {% trans "Most accessed subjects" %} </p>
+                                   <p> {% trans "Subjects" %} </p>
                                 </div>
                            
                                 <div class="selector" data-url="resources">
-                                   <p> {% trans "Most accessed resource" %} </p>
+                                   <p> {% trans "Resource" %} </p>
                                 </div>
                          
                     </div>
