modified css order and added arrow for most used sections

--- a/dashboards/static/dashboards/css/general.sass
+++ b/dashboards/static/dashboards/css/general.sass
@@ -90,7 +90,11 @@ $title-color: #009688
     p
         padding-top: 10px
         font-size: 16px
-
+        float: left
+.selector
+    i
+        margin-right: 20px
+        margin-top: 6px
  
 .middle-chart
     article
