--- a/dashboards/static/dashboards/css/general.css
+++ b/dashboards/static/dashboards/css/general.css
@@ -72,7 +72,12 @@
   border-radius: 0px 20px 20px 0px; }
   .selector p {
     padding-top: 10px;
-    font-size: 16px; }
+    font-size: 16px;
+    float: left; }
+
+.selector i {
+  margin-right: 20px;
+  margin-top: 6px; }
 
 .middle-chart article {
   text-align: center; }
