--- a/dashboards/templates/dashboards/category.html
+++ b/dashboards/templates/dashboards/category.html
@@ -3,7 +3,7 @@
 {% load static i18n pagination %}
 {% load django_bootstrap_breadcrumbs %}
 {% block style %}
-    <link rel="stylesheet" type="text/css" href="{% static 'analytics/general.css' %}">  
+    <link rel="stylesheet" type="text/css" href="{% static 'dashboards/css/general.css' %}">  
     <link rel="stylesheet" type="text/css" href="{% static 'dashboards/css/dashboards_category.css' %}">
 {% endblock style %}
 
