--- a/goals/templates/goals/_form_submit.html
+++ b/goals/templates/goals/_form_submit.html
@@ -46,6 +46,15 @@
 			{% endif %}
 		</div>
 	{% endfor %}
+
+	<hr />
+
+	<div class="form-group">
+		<div class="col-md-12">
+	    	<label for="dificulties">{% trans 'There are obstacles to your activities?' %}</label>
+	    	<textarea class="form-control" id="dificulties" name="dificulties" placeholder="{% trans 'Type here the dificulties that may harm your performance' %}"></textarea>
+	    </div>
+  	</div>
 </form>
 
 <hr />
