Updating goals translations

--- a/goals/templates/goals/_form_submit.html
+++ b/goals/templates/goals/_form_submit.html
@@ -51,7 +51,7 @@
 
 	<div class="form-group">
 		<div class="col-md-12">
-	    	<label for="dificulties">{% trans 'There are obstacles to your activities?' %}</label>
+	    	<h4><b>{% trans 'There are obstacles to your activities?' %}</b></h4>
 	    	<textarea class="form-control" id="dificulties" name="dificulties" placeholder="{% trans 'Type here the dificulties that may harm your performance' %}"></textarea>
 	    </div>
   	</div>
